# stox

./: .gitignore  Cargo.toml  NEWS.md  README.md  meson.build  meson_options.txt
.github/workflows/: fedora.yml  rust.yml  ubuntu.yml
data/: meson.build  org.itzswirlz.stox.desktop.in.in  org.itzswirlz.stox.gschema.xml.in  resources.gresource.xml
data/resources/ui/: menu.ui  stoxsidebaritem.ui
po/: LINGUAS  POTFILES.in  en_US.po  es.po  meson.build  pt.po  ru.po  stox.pot
src/: axes.rs  config.rs  config.rs.in  data_helper.rs  dialogs.rs  fs_persistence.rs  main.rs  main.ui  meson.build  stoxsidebaritem.ui
src/datagrid/: imp.rs  mod.rs
src/sidebar_item/: imp.rs  mod.rs
src/symbolbox/: imp.rs  mod.rs
