[package]
name = "stox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
glib = "0.16.7"
gtk4 = "0.5.5"
once_cell = "1.17.0"
tokio = { version = "1", features = ["full"] }
yahoo_finance_api = {version = "1.3.0", features = ["blocking"]}
